<resources>
    <string name="app_name">EfficientJanitor</string>
    <string name="bag_weight_hint">bag weight (kg)</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
    <string name="calculate">Calculate</string>
    <string name="efficient_janitor_title">Efficient Janitor</string>
    <string name="delete">Delete</string>
    <string name="delete_bag">Delete bag</string>
    <string name="addRandom">Add 10 Random (use for DEMO)</string>
    <string name="total_trips_summary">Total Trips: %d</string>
    <string name="total_weight_summary">Total Weight: %.2f Kg</string>
    <string name="invalid_weight_range">Invalid weight (%.2f - %.2f Kg)</string>
    <string name="cant_be_empty">Weight cannot be empty</string>
    <string name="list_was_cleared">List was cleared</string>
    <string name="result_title">Calculation Result</string>
    <string name="trip_number">Trip %d</string>

</resources>